feat(curso): tornar nome do curso clicável para visualização de detalhes
- Implementa link dinâmico no nome do curso dentro da tabela de pesquisa.
- Conecta a visualização à rota informacoes_curso, permitindo a consulta de dados sem permissão de edição.
- Padroniza o comportamento de navegação entre os módulos de Alunos e Cursos.
- Ajusta o HTML para herdar corretamente os estilos de hover e estados de seleção já definidos no CSS global.

--- a/aprosys/aprosys/templates/academico/cursos/pesquisar_curso.html
+++ b/aprosys/aprosys/templates/academico/cursos/pesquisar_curso.html
@@ -60,7 +60,11 @@
             {% for curso in cursos %}
                 <tr>
                     <td><input type="checkbox" class="course-checkbox" value="{{ curso.pk }}"></td>
-                    <td>{{ curso.nome }}</td>
+                    <td>
+                        <a href="{% url 'informacoes_curso' curso.pk %}" class="course-info-link">
+                            {{ curso.nome }}
+                        </a>
+                    </td>
                     
                     <td class="table-action-cell">
                         <a href="{% url 'editar_curso' curso.pk %}">              
