--- a/aprosys/aprosys/templates/academico/cursos/cadastrar_curso.html
+++ b/aprosys/aprosys/templates/academico/cursos/cadastrar_curso.html
@@ -5,54 +5,35 @@
 
 {% block content %}
 <div class="report-header">
-  <h3 class="report-subtitle">{% if curso %}Editar{% else %}Cadastrar{% endif %}</h3>
-  <h1 class="report-title">Curso</h1>
+    <h3 class="report-subtitle">
+        {% if visualizar %}Informações do{% elif curso %}Editar{% else %}Cadastrar{% endif %}
+    </h3>
+    <h1 class="report-title">Curso</h1>
 </div>
 
-{% if form.errors %}
-<div class="alert alert-danger">
-  <ul>
-    {% for field in form %}
-      {% for err in field.errors %}
-        <li><strong>{{ field.label }}:</strong> {{ err }}</li>
-      {% endfor %}
-    {% endfor %}
-    {% for err in form.non_field_errors %}
-      <li>{{ err }}</li>
-    {% endfor %}
-  </ul>
-</div>
-{% endif %}
+<form method="post" action="...">
+    {% csrf_token %}
 
-<form method="post" 
-      action="{% if curso %}{% url 'editar_curso' curso.pk %}{% else %}{% url 'cadastrar_curso' %}{% endif %}" 
-      id="curso-form">
-  {% csrf_token %}
+    <fieldset class="chart-container">
+        <div class="form-fields-wrapper">
+            <div class="form-group field-half">
+                {{ form.nome.label_tag }}
+                <input type="text" name="nome" value="{{ curso.nome }}" 
+                       {% if visualizar %}readonly{% endif %}>
+            </div>
+        </div>
+    </fieldset>
 
-  {% if field_name %}
-    <input type="hidden" name="field_name" value="{{ field_name }}">
-  {% elif request.GET.field_name %}
-    <input type="hidden" name="field_name" value="{{ request.GET.field_name }}">
-  {% endif %}
-
-  <fieldset class="chart-container">
-    <div class="form-fields-wrapper">
-      <div class="form-group field-half">
-        {{ form.nome.label_tag }}
-        {{ form.nome }}
-      </div>
+    <div class="btn_wrapper">
+        {% if not visualizar %}
+            <button type="submit" class="btn btn-save">
+                {% if curso %}Salvar Alterações{% else %}Cadastrar{% endif %}
+            </button>
+        {% endif %}
+        
+        <button type="button" class="btn btn-cancel" onclick="window.history.back();">
+            {% if visualizar %}Voltar{% else %}Cancelar{% endif %}
+        </button>
     </div>
-  </fieldset>
-
-  <div class="btn_wrapper">
-    <button type="submit" class="btn btn-save">
-      {% if curso %}Salvar Alterações{% else %}Cadastrar{% endif %}
-    </button>
-    
-    <button type="button" class="btn btn-cancel"
-      onclick="if(window.opener) { window.close(); } else { window.history.back(); }">
-      {% if field_name or request.GET.field_name %}Fechar{% else %}Cancelar{% endif %}
-    </button>
-  </div>
 </form>
 {% endblock %}
